using Modeler.DataModel.Schemas;

namespace Modeler.DataModel.Sample;

public class OrganizationSchema : Schema
{
    public OrganizationSchema()
    {
        this.Name = "organizations";
    }
}